building tests environment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,16 @@ project(smartrail_hostctrl)
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp serial
+  roscpp 
 )
+
+find_package(Boost REQUIRED COMPONENTS system)
 
 ###################################
 ## catkin specific configuration ##
@@ -48,3 +50,10 @@ add_executable(pgs_node src/pgs_node.cpp)
 target_link_libraries(pgs_node
    ${catkin_LIBRARIES}
 )
+
+#############
+## Testing ##
+#############
+if (CATKIN_ENABLE_TESTING)
+	add_subdirectory(tests)
+endif()
