--- a/package.xml
+++ b/package.xml
@@ -11,7 +11,7 @@
   <depend>roscpp</depend>
   <buildtool_depend>catkin</buildtool_depend>
   <test_depend>boost</test_depend>
-
+  <test_depend>roscpp</test_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
