--- a/package.xml
+++ b/package.xml
@@ -13,9 +13,11 @@
   <depend>rosserial_msgs</depend>
   <depend>topic_tools</depend>
   <build_depend>roslaunch</build_depend>
+  <build_depend>message_generation</build_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <test_depend>boost</test_depend>
   <test_depend>roscpp</test_depend>
+  <exec_depend>message_runtime</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
