--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(Boost REQUIRED COMPONENTS
 ###################################
 add_message_files(
   FILES
-  PgsCorrection.msg
+  MessageBytes.msg
 )
 
 generate_messages(
